<resources>
    <string name="app_name">My Application</string>
    <string name="c">C</string>
    <string name="ce">CE</string>
    <string name="bs">BS</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="devide">/</string>
    <string name="multiply">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="change">+/-</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
</resources>